# lila

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  app-content-manager.cpp  app-content-manager.h  drawable-element-base.h  global-consts.h  idrawable-element.h  lila-app.cpp  lila-app.h  main.cpp
src/drawable-elements/: mouse-element.h  text-editor-element.h
src/drawable-elements/widgets/: text-editor.cpp  text-editor.h
src/drawable-elements/widgets/text-editor/: text-editor-background.h  text-editor-line-display.h
